eks-base/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-world-apache-gateway
  namespace: cert-manager
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "study.mflyyou.com"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: istio-svcs-certs-secret # the generated cert secret
      hosts:
        - "study.mflyyou.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world-apache
  namespace: cert-manager
spec:
  hosts:
    - "study.mflyyou.com"
  gateways:
    - hello-world-apache-gateway
  http:
    - route:
        - destination:
            host: hello-world-apache.hello-world.svc.cluster.local
